# python-project-52

./: .gitignore  .sonarignore  Makefile  README.md  build.sh  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: sonar.yml
hexlet_code/: settings.py  urls.py  views.py
locale/ru/LC_MESSAGES/: django.po
task_manager/: apps.py  filters.py  forms.py  models.py  tests.py  views.py
task_manager/migrations/: 0001_initial.py  0002_task.py  0003_label_task_labels.py
templates/: 404.html  base.html  index.html  label_create.html  label_delete.html  label_update.html  labels.html  login.html  register.html  status_create.html  status_delete.html  status_update.html  statuses.html  task_create.html  task_delete.html  task_detail.html  task_update.html  tasks.html  user_create.html  user_delete.html  user_update.html  users.html
