[project]
name = "python-project-52"
version = "0.1.0"
description = "Task Manager Django Application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=5",
    "django-bootstrap5>=26.2",
    "django-filter>=26.1",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
    "rollbar>=1.4.0",
    "whitenoise>=6.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
