[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager Django Application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=5",
    "django-bootstrap5>=26.2",
    "django-filter>=26.1",
    "flake8>=7.3.0",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
    "rollbar>=1.4.0",
    "ruff>=0.15.22",
    "whitenoise>=6.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "coverage>=7.0.0",
    "django-debug-toolbar>=4.0.0",
]

[tool.coverage.run]
source = ["task_manager", "hexlet_code"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "*/wsgi.py",
    "*/manage.py",
    "*/settings.py",
    "*/admin.py",
    "*/apps.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
